[gd_scene load_steps=12 format=4 uid="uid://dc5kpmgtm7i7k"]

[ext_resource type="Script" path="res://Scripts/FrostManager.gd" id="1_0s8sj"]
[ext_resource type="TileSet" uid="uid://by7wu55cjrnhd" path="res://Resources/platforms.tres" id="1_qgxo7"]
[ext_resource type="TileSet" uid="uid://dqj7cg6vm786t" path="res://Resources/obstacles.tres" id="2_7tm2o"]
[ext_resource type="Texture2D" uid="uid://bam67d3f7tdl1" path="res://Art/NPC_Interact.png" id="4_a7wfw"]
[ext_resource type="Script" path="res://Scripts/Checkpoint.gd" id="5_y21hv"]
[ext_resource type="Texture2D" uid="uid://bu4273q2tcrhf" path="res://Art/Checkpoint.png" id="6_mwlt6"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_k21x6"]
size = Vector2(128, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_bjy4x"]
atlas = ExtResource("6_mwlt6")
region = Rect2(0, 128, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_oi5q8"]
atlas = ExtResource("6_mwlt6")
region = Rect2(0, 0, 128, 128)

[sub_resource type="SpriteFrames" id="SpriteFrames_sac2s"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bjy4x")
}],
"loop": true,
"name": &"Default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_oi5q8")
}],
"loop": true,
"name": &"Hit",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8ny5a"]
size = Vector2(128, 128)

[node name="Section_Frost" type="Node2D"]
script = ExtResource("1_0s8sj")
metadata/_edit_horizontal_guides_ = [-11712.0]

[node name="Platforms" type="TileMapLayer" parent="."]
use_parent_material = true
tile_map_data = PackedByteArray("AADIAE8AAQAAAAAAAADJAE8AAQAAAAAAAADKAE8AAQAAAAAAAADLAE8AAQAAAAAAAADIAEwAAQAAAAAAAQDJAEwAAQAAAAAAAQDKAEwAAQAAAAAAAQDLAEwAGAAAAAAAAgDMAEsAAQAAAAAAAQDNAEsAAQAAAAAAAQDOAEsAAQAAAAAAAQDPAEsAAQAAAAAAAQDQAEsAAQAAAAAAAQDMAFAAAQAAAAAAAADNAFAAAQAAAAAAAADOAFAAAQAAAAAAAADPAFAAAQAAAAAAAADQAFAAAQAAAAAAAADRAFAAFgAAAAAAAADSAFAAFgAAAAAAAADTAFAAFgAAAAAAAADUAFAAFgAAAAAAAADVAFAAFgAAAAAAAADWAFAAFgAAAAAAAADXAFAAFgAAAAAAAADYAFAAFgAAAAAAAADZAFAAIAAAAAAAAADdAFAAIAAAAAAAAQDeAFAAFgAAAAAAAADfAFAAFgAAAAAAAADgAFAAIAAAAAAAAADRAEsAFgAAAAAAAQDSAEsAFgAAAAAAAQDTAEsAFgAAAAAAAQDUAEsAFgAAAAAAAQDVAEsAFgAAAAAAAQDWAEsAFgAAAAAAAQDXAEsAFgAAAAAAAQDYAEsAFgAAAAAAAQDZAEsAIAAAAAAAAwDdAEsAIAAAAAAAAgDeAEsAFgAAAAAAAQDfAEsAFgAAAAAAAQDgAEsAIAAAAAAAAwDkAEsAIAAAAAAAAgDlAEsAFgAAAAAAAQDmAEsAFgAAAAAAAQDnAEsAIAAAAAAAAwDkAFAAIAAAAAAAAQDlAFAAFgAAAAAAAADmAFAAFgAAAAAAAADnAFAAIAAAAAAAAADYAEoAFQAAAAAAAQDXAEoAFQAAAAAAAQDWAEoAFQAAAAAAAQDVAEoAFQAAAAAAAQDUAEoAFQAAAAAAAQDTAEoAFQAAAAAAAQDSAEoAFQAAAAAAAQDRAEoAFQAAAAAAAQDQAEoAFQAAAAAAAQDPAEoAFQAAAAAAAQDOAEoAFQAAAAAAAQDNAEoAFQAAAAAAAQDMAEoAFQAAAAAAAQDLAEoAFQAAAAAAAQDLAEsAFQAAAAAAAQDKAEoAFQAAAAAAAQDKAEsAFQAAAAAAAQDJAEsAFQAAAAAAAQDJAEoAFQAAAAAAAQDIAEoAFQAAAAAAAQDIAEsAFQAAAAAAAQDHAEsAFQAAAAAAAQDHAEoAFQAAAAAAAQDHAEwAAQAAAAAAAQDGAEwAAQAAAAAAAQDGAEsAFQAAAAAAAQDGAEoAFQAAAAAAAQDGAE8AAQAAAAAAAADHAE8AAQAAAAAAAADGAFAAFQAAAAAAAQDHAFAAFQAAAAAAAQDIAFAAFQAAAAAAAQDJAFAAFQAAAAAAAQDKAFAAFQAAAAAAAQDLAFAAFQAAAAAAAQDGAFEAFQAAAAAAAQDHAFEAFQAAAAAAAQDIAFEAFQAAAAAAAQDJAFEAFQAAAAAAAQDKAFEAFQAAAAAAAQDLAFEAFQAAAAAAAQDMAFEAFQAAAAAAAQDNAFEAFQAAAAAAAQDOAFEAFQAAAAAAAQDPAFEAFQAAAAAAAQDQAFEAFQAAAAAAAQDRAFEAFQAAAAAAAQDSAFEAFQAAAAAAAQDTAFEAFQAAAAAAAQDUAFEAFQAAAAAAAQDVAFEAFQAAAAAAAQDWAFEAFQAAAAAAAQDXAFEAFQAAAAAAAQDYAFEAFQAAAAAAAQDeAFEAFQAAAAAAAQDfAFEAFQAAAAAAAQDlAFEAFQAAAAAAAQDmAFEAFQAAAAAAAQDnAFEAFgAAAAAAAwDnAEoAFgAAAAAAAwDmAEoAFQAAAAAAAQDlAEoAFQAAAAAAAQDZAFEAFgAAAAAAAwDZAFIAFgAAAAAAAwDZAFMAFgAAAAAAAwDZAFQAFgAAAAAAAwDZAFUAFgAAAAAAAwDgAFEAFgAAAAAAAwDgAFIAFgAAAAAAAwDgAFMAFgAAAAAAAwDgAFQAFgAAAAAAAwDgAFUAFgAAAAAAAwDgAEoAFgAAAAAAAwDgAEkAFgAAAAAAAwDgAEgAFgAAAAAAAwDgAEcAFgAAAAAAAwDgAEYAFgAAAAAAAwDkAFEAFgAAAAAAAgDkAFIAFgAAAAAAAgDkAFMAFgAAAAAAAgDkAFQAFgAAAAAAAgDkAFUAFgAAAAAAAgDZAEoAFgAAAAAAAwDZAEkAFgAAAAAAAwDZAEgAFgAAAAAAAwDZAEcAFgAAAAAAAwDZAEYAFgAAAAAAAwDkAEoAFgAAAAAAAgDkAEkAFgAAAAAAAgDkAEgAFgAAAAAAAgDkAEcAFgAAAAAAAgDkAEYAFgAAAAAAAgDlAEYAFQAAAAAAAQDlAEcAFQAAAAAAAQDlAEgAFQAAAAAAAQDlAEkAFQAAAAAAAQDmAEYAFQAAAAAAAQDmAEcAFQAAAAAAAQDmAEgAFQAAAAAAAQDmAEkAFQAAAAAAAQDnAEYAFgAAAAAAAwDnAEcAFgAAAAAAAwDnAEgAFgAAAAAAAwDnAEkAFgAAAAAAAwDlAFIAFQAAAAAAAQDlAFMAFQAAAAAAAQDlAFQAFQAAAAAAAQDlAFUAFQAAAAAAAQDmAFIAFQAAAAAAAQDmAFMAFQAAAAAAAQDmAFQAFQAAAAAAAQDmAFUAFQAAAAAAAQDnAFIAFgAAAAAAAwDnAFMAFgAAAAAAAwDnAFQAFgAAAAAAAwDnAFUAFgAAAAAAAwDeAEYAFQAAAAAAAQDeAEcAFQAAAAAAAQDeAEgAFQAAAAAAAQDeAEkAFQAAAAAAAQDeAEoAFQAAAAAAAQDfAEYAFQAAAAAAAQDfAEcAFQAAAAAAAQDfAEgAFQAAAAAAAQDfAEkAFQAAAAAAAQDfAEoAFQAAAAAAAQDGAEYAFQAAAAAAAQDGAEcAFQAAAAAAAQDGAEgAFQAAAAAAAQDGAEkAFQAAAAAAAQDHAEYAFQAAAAAAAQDHAEcAFQAAAAAAAQDHAEgAFQAAAAAAAQDHAEkAFQAAAAAAAQDIAEYAFQAAAAAAAQDIAEcAFQAAAAAAAQDIAEgAFQAAAAAAAQDIAEkAFQAAAAAAAQDJAEYAFQAAAAAAAQDJAEcAFQAAAAAAAQDJAEgAFQAAAAAAAQDJAEkAFQAAAAAAAQDKAEYAFQAAAAAAAQDKAEcAFQAAAAAAAQDKAEgAFQAAAAAAAQDKAEkAFQAAAAAAAQDLAEYAFQAAAAAAAQDLAEcAFQAAAAAAAQDLAEgAFQAAAAAAAQDLAEkAFQAAAAAAAQDMAEYAFQAAAAAAAQDMAEcAFQAAAAAAAQDMAEgAFQAAAAAAAQDMAEkAFQAAAAAAAQDNAEYAFQAAAAAAAQDNAEcAFQAAAAAAAQDNAEgAFQAAAAAAAQDNAEkAFQAAAAAAAQDOAEYAFQAAAAAAAQDOAEcAFQAAAAAAAQDOAEgAFQAAAAAAAQDOAEkAFQAAAAAAAQDPAEYAFQAAAAAAAQDPAEcAFQAAAAAAAQDPAEgAFQAAAAAAAQDPAEkAFQAAAAAAAQDQAEYAFQAAAAAAAQDQAEcAFQAAAAAAAQDQAEgAFQAAAAAAAQDQAEkAFQAAAAAAAQDRAEYAFQAAAAAAAQDRAEcAFQAAAAAAAQDRAEgAFQAAAAAAAQDRAEkAFQAAAAAAAQDSAEYAFQAAAAAAAQDSAEcAFQAAAAAAAQDSAEgAFQAAAAAAAQDSAEkAFQAAAAAAAQDTAEYAFQAAAAAAAQDTAEcAFQAAAAAAAQDTAEgAFQAAAAAAAQDTAEkAFQAAAAAAAQDUAEYAFQAAAAAAAQDUAEcAFQAAAAAAAQDUAEgAFQAAAAAAAQDUAEkAFQAAAAAAAQDVAEYAFQAAAAAAAQDVAEcAFQAAAAAAAQDVAEgAFQAAAAAAAQDVAEkAFQAAAAAAAQDWAEYAFQAAAAAAAQDWAEcAFQAAAAAAAQDWAEgAFQAAAAAAAQDWAEkAFQAAAAAAAQDXAEYAFQAAAAAAAQDXAEcAFQAAAAAAAQDXAEgAFQAAAAAAAQDXAEkAFQAAAAAAAQDYAEYAFQAAAAAAAQDYAEcAFQAAAAAAAQDYAEgAFQAAAAAAAQDYAEkAFQAAAAAAAQDGAFIAFQAAAAAAAQDGAFMAFQAAAAAAAQDGAFQAFQAAAAAAAQDGAFUAFQAAAAAAAQDHAFIAFQAAAAAAAQDHAFMAFQAAAAAAAQDHAFQAFQAAAAAAAQDHAFUAFQAAAAAAAQDIAFIAFQAAAAAAAQDIAFMAFQAAAAAAAQDIAFQAFQAAAAAAAQDIAFUAFQAAAAAAAQDJAFIAFQAAAAAAAQDJAFMAFQAAAAAAAQDJAFQAFQAAAAAAAQDJAFUAFQAAAAAAAQDKAFIAFQAAAAAAAQDKAFMAFQAAAAAAAQDKAFQAFQAAAAAAAQDKAFUAFQAAAAAAAQDLAFIAFQAAAAAAAQDLAFMAFQAAAAAAAQDLAFQAFQAAAAAAAQDLAFUAFQAAAAAAAQDMAFIAFQAAAAAAAQDMAFMAFQAAAAAAAQDMAFQAFQAAAAAAAQDMAFUAFQAAAAAAAQDNAFIAFQAAAAAAAQDNAFMAFQAAAAAAAQDNAFQAFQAAAAAAAQDNAFUAFQAAAAAAAQDOAFIAFQAAAAAAAQDOAFMAFQAAAAAAAQDOAFQAFQAAAAAAAQDOAFUAFQAAAAAAAQDPAFIAFQAAAAAAAQDPAFMAFQAAAAAAAQDPAFQAFQAAAAAAAQDPAFUAFQAAAAAAAQDQAFIAFQAAAAAAAQDQAFMAFQAAAAAAAQDQAFQAFQAAAAAAAQDQAFUAFQAAAAAAAQDRAFIAFQAAAAAAAQDRAFMAFQAAAAAAAQDRAFQAFQAAAAAAAQDRAFUAFQAAAAAAAQDSAFIAFQAAAAAAAQDSAFMAFQAAAAAAAQDSAFQAFQAAAAAAAQDSAFUAFQAAAAAAAQDTAFIAFQAAAAAAAQDTAFMAFQAAAAAAAQDTAFQAFQAAAAAAAQDTAFUAFQAAAAAAAQDUAFIAFQAAAAAAAQDUAFMAFQAAAAAAAQDUAFQAFQAAAAAAAQDUAFUAFQAAAAAAAQDVAFIAFQAAAAAAAQDVAFMAFQAAAAAAAQDVAFQAFQAAAAAAAQDVAFUAFQAAAAAAAQDWAFIAFQAAAAAAAQDWAFMAFQAAAAAAAQDWAFQAFQAAAAAAAQDWAFUAFQAAAAAAAQDXAFIAFQAAAAAAAQDXAFMAFQAAAAAAAQDXAFQAFQAAAAAAAQDXAFUAFQAAAAAAAQDYAFIAFQAAAAAAAQDYAFMAFQAAAAAAAQDYAFQAFQAAAAAAAQDYAFUAFQAAAAAAAQDCAEYAFQAAAAAAAQDCAEcAFQAAAAAAAQDCAEgAFQAAAAAAAQDCAEkAFQAAAAAAAQDCAEoAFQAAAAAAAQDCAEsAFQAAAAAAAQDCAEwAFQAAAAAAAQDCAE0AFQAAAAAAAQDCAE4AFQAAAAAAAQDCAE8AFQAAAAAAAQDCAFAAFQAAAAAAAQDCAFEAFQAAAAAAAQDCAFIAFQAAAAAAAQDCAFMAFQAAAAAAAQDCAFQAFQAAAAAAAQDCAFUAFQAAAAAAAQDDAEYAFQAAAAAAAQDDAEcAFQAAAAAAAQDDAEgAFQAAAAAAAQDDAEkAFQAAAAAAAQDDAEoAFQAAAAAAAQDDAEsAFQAAAAAAAQDDAEwAFQAAAAAAAQDDAE0AAQAAAAAAAwDDAE4AAQAAAAAAAwDDAE8AFQAAAAAAAQDDAFAAFQAAAAAAAQDDAFEAFQAAAAAAAQDDAFIAFQAAAAAAAQDDAFMAFQAAAAAAAQDDAFQAFQAAAAAAAQDDAFUAFQAAAAAAAQDEAEYAFQAAAAAAAQDEAEcAFQAAAAAAAQDEAEgAFQAAAAAAAQDEAEkAFQAAAAAAAQDEAEoAFQAAAAAAAQDEAEsAFQAAAAAAAQDEAEwAAQAAAAAAAQDEAE8AAQAAAAAAAADEAFAAFQAAAAAAAQDEAFEAFQAAAAAAAQDEAFIAFQAAAAAAAQDEAFMAFQAAAAAAAQDEAFQAFQAAAAAAAQDEAFUAFQAAAAAAAQDFAEYAFQAAAAAAAQDFAEcAFQAAAAAAAQDFAEgAFQAAAAAAAQDFAEkAFQAAAAAAAQDFAEoAFQAAAAAAAQDFAEsAFQAAAAAAAQDFAEwAAQAAAAAAAQDFAE8AAQAAAAAAAADFAFAAFQAAAAAAAQDFAFEAFQAAAAAAAQDFAFIAFQAAAAAAAQDFAFMAFQAAAAAAAQDFAFQAFQAAAAAAAQDFAFUAFQAAAAAAAQDdAFEAFgAAAAAAAgDdAFIAFgAAAAAAAgDdAFMAFgAAAAAAAgDdAFQAFgAAAAAAAgDdAFUAFgAAAAAAAgDdAEoAFgAAAAAAAgDdAEkAFgAAAAAAAgDdAEgAFgAAAAAAAgDdAEcAFgAAAAAAAgDdAEYAFgAAAAAAAgDeAFIAFQAAAAAAAQDeAFMAFQAAAAAAAQDeAFQAFQAAAAAAAQDeAFUAFQAAAAAAAQDfAFIAFQAAAAAAAQDfAFMAFQAAAAAAAQDfAFQAFQAAAAAAAQDfAFUAFQAAAAAAAQAAAUYAFQAAAAAAAQAAAUcAFQAAAAAAAQAAAUgAFQAAAAAAAQAAAUkAFQAAAAAAAQAAAUoAFQAAAAAAAQAAAUsAFQAAAAAAAQAAAUwAFgAAAAAAAgAAAU0AFgAAAAAAAgAAAU4AFgAAAAAAAgAAAU8AFgAAAAAAAgAAAVAAFQAAAAAAAQAAAVEAFQAAAAAAAQAAAVIAFQAAAAAAAQAAAVMAFQAAAAAAAQAAAVQAFQAAAAAAAQAAAVUAFQAAAAAAAQABAUYAFQAAAAAAAQABAUcAFQAAAAAAAQABAUgAFQAAAAAAAQABAUkAFQAAAAAAAQABAUoAFQAAAAAAAQABAUsAFQAAAAAAAQABAUwAFQAAAAAAAQABAU0AFQAAAAAAAQABAU4AFQAAAAAAAQABAU8AFQAAAAAAAQABAVAAFQAAAAAAAQABAVEAFQAAAAAAAQABAVIAFQAAAAAAAQABAVMAFQAAAAAAAQABAVQAFQAAAAAAAQABAVUAFQAAAAAAAQACAUYAFQAAAAAAAQACAUcAFQAAAAAAAQACAUgAFQAAAAAAAQACAUkAFQAAAAAAAQACAUoAFQAAAAAAAQACAUsAFQAAAAAAAQACAUwAFQAAAAAAAQACAU0AFQAAAAAAAQACAU4AFQAAAAAAAQACAU8AFQAAAAAAAQACAVAAFQAAAAAAAQACAVEAFQAAAAAAAQACAVIAFQAAAAAAAQACAVMAFQAAAAAAAQACAVQAFQAAAAAAAQACAVUAFQAAAAAAAQADAUYAFQAAAAAAAQADAUcAFQAAAAAAAQADAUgAFQAAAAAAAQADAUkAFQAAAAAAAQADAUoAFQAAAAAAAQADAUsAFQAAAAAAAQADAUwAFQAAAAAAAQADAU0AFQAAAAAAAQADAU4AFQAAAAAAAQADAU8AFQAAAAAAAQADAVAAFQAAAAAAAQADAVEAFQAAAAAAAQADAVIAFQAAAAAAAQADAVMAFQAAAAAAAQADAVQAFQAAAAAAAQADAVUAFQAAAAAAAQAEAUYAFQAAAAAAAQAEAUcAFQAAAAAAAQAEAUgAFQAAAAAAAQAEAUkAFQAAAAAAAQAEAUoAFQAAAAAAAQAEAUsAFQAAAAAAAQAEAUwAFQAAAAAAAQAEAU0AFQAAAAAAAQAEAU4AFQAAAAAAAQAEAU8AFQAAAAAAAQAEAVAAFQAAAAAAAQAEAVEAFQAAAAAAAQAEAVIAFQAAAAAAAQAEAVMAFQAAAAAAAQAEAVQAFQAAAAAAAQAEAVUAFQAAAAAAAQAFAUYAFQAAAAAAAQAFAUcAFQAAAAAAAQAFAUgAFQAAAAAAAQAFAUkAFQAAAAAAAQAFAUoAFQAAAAAAAQAFAUsAFQAAAAAAAQAFAUwAFQAAAAAAAQAFAU0AFQAAAAAAAQAFAU4AFQAAAAAAAQAFAU8AFQAAAAAAAQAFAVAAFQAAAAAAAQAFAVEAFQAAAAAAAQAFAVIAFQAAAAAAAQAFAVMAFQAAAAAAAQAFAVQAFQAAAAAAAQAFAVUAFQAAAAAAAQD/AFAAFgAAAAAAAAD+AFAAFgAAAAAAAAD9AFAAFgAAAAAAAAD8AFAAFgAAAAAAAAD7AFAAFgAAAAAAAAD6AFAAIAAAAAAAAQD5AFEAFgAAAAAAAAD4AFEAFgAAAAAAAAD3AFEAFgAAAAAAAAD2AFEAFgAAAAAAAAD1AFEAIAAAAAAAAQD0AFIAFgAAAAAAAADzAFIAFgAAAAAAAADyAFIAFgAAAAAAAADxAFIAFgAAAAAAAADwAFIAIAAAAAAAAQDvAFMAFgAAAAAAAADuAFMAFgAAAAAAAADtAFMAFgAAAAAAAADsAFMAIAAAAAAAAQD/AEsAFgAAAAAAAQD+AEsAFgAAAAAAAQD9AEsAFgAAAAAAAQD8AEsAFgAAAAAAAQD7AEsAFgAAAAAAAQD6AEsAIAAAAAAAAgD5AEoAFgAAAAAAAQD4AEoAFgAAAAAAAQD3AEoAFgAAAAAAAQD2AEoAFgAAAAAAAQD1AEoAIAAAAAAAAgD0AEkAFgAAAAAAAQDzAEkAFgAAAAAAAQDyAEkAFgAAAAAAAQDxAEkAFgAAAAAAAQDwAEkAIAAAAAAAAgDvAEgAFgAAAAAAAQDuAEgAFgAAAAAAAQDtAEgAFgAAAAAAAQDsAEgAIAAAAAAAAgDsAFQAFgAAAAAAAgDsAFUAFgAAAAAAAgDsAEcAFgAAAAAAAgDsAEYAFgAAAAAAAgDtAEYAFQAAAAAAAQDuAEYAFQAAAAAAAQDvAEYAFQAAAAAAAQDwAEYAFQAAAAAAAQDxAEYAFQAAAAAAAQDyAEYAFQAAAAAAAQDzAEYAFQAAAAAAAQD0AEYAFQAAAAAAAQD1AEYAFQAAAAAAAQD2AEYAFQAAAAAAAQD3AEYAFQAAAAAAAQD4AEYAFQAAAAAAAQD5AEYAFQAAAAAAAQD6AEYAFQAAAAAAAQD7AEYAFQAAAAAAAQD8AEYAFQAAAAAAAQD9AEYAFQAAAAAAAQD+AEYAFQAAAAAAAQD/AEYAFQAAAAAAAQD/AEcAFQAAAAAAAQD/AEgAFQAAAAAAAQD/AEkAFQAAAAAAAQD/AEoAFQAAAAAAAQD+AEoAFQAAAAAAAQD9AEoAFQAAAAAAAQD8AEoAFQAAAAAAAQD7AEoAFQAAAAAAAQD6AEoAFQAAAAAAAQD6AEkAFQAAAAAAAQD7AEkAFQAAAAAAAQD8AEkAFQAAAAAAAQD9AEkAFQAAAAAAAQD+AEkAFQAAAAAAAQD+AEgAFQAAAAAAAQD+AEcAFQAAAAAAAQD9AEcAFQAAAAAAAQD8AEcAFQAAAAAAAQD7AEcAFQAAAAAAAQD6AEcAFQAAAAAAAQD5AEcAFQAAAAAAAQD4AEcAFQAAAAAAAQD3AEcAFQAAAAAAAQD2AEcAFQAAAAAAAQD1AEcAFQAAAAAAAQD0AEcAFQAAAAAAAQDtAEcAFQAAAAAAAQDuAEcAFQAAAAAAAQDvAEcAFQAAAAAAAQDwAEcAFQAAAAAAAQDxAEcAFQAAAAAAAQDyAEcAFQAAAAAAAQDzAEcAFQAAAAAAAQDyAEgAFQAAAAAAAQDxAEgAFQAAAAAAAQDwAEgAFQAAAAAAAQDzAEgAFQAAAAAAAQD0AEgAFQAAAAAAAQD1AEgAFQAAAAAAAQD2AEgAFQAAAAAAAQD3AEgAFQAAAAAAAQD4AEgAFQAAAAAAAQD5AEgAFQAAAAAAAQD6AEgAFQAAAAAAAQD7AEgAFQAAAAAAAQD8AEgAFQAAAAAAAQD9AEgAFQAAAAAAAQD5AEkAFQAAAAAAAQD4AEkAFQAAAAAAAQD3AEkAFQAAAAAAAQD2AEkAFQAAAAAAAQD1AEkAFQAAAAAAAQDtAFQAFQAAAAAAAQDtAFUAFQAAAAAAAQDuAFQAFQAAAAAAAQDuAFUAFQAAAAAAAQDvAFQAFQAAAAAAAQDvAFUAFQAAAAAAAQDwAFQAFQAAAAAAAQDwAFUAFQAAAAAAAQDxAFQAFQAAAAAAAQDxAFUAFQAAAAAAAQDyAFQAFQAAAAAAAQDyAFUAFQAAAAAAAQDzAFQAFQAAAAAAAQDzAFUAFQAAAAAAAQD0AFQAFQAAAAAAAQD0AFUAFQAAAAAAAQD1AFQAFQAAAAAAAQD1AFUAFQAAAAAAAQD2AFQAFQAAAAAAAQD2AFUAFQAAAAAAAQD3AFQAFQAAAAAAAQD3AFUAFQAAAAAAAQD4AFQAFQAAAAAAAQD4AFUAFQAAAAAAAQD5AFQAFQAAAAAAAQD5AFUAFQAAAAAAAQD6AFQAFQAAAAAAAQD6AFUAFQAAAAAAAQD7AFQAFQAAAAAAAQD7AFUAFQAAAAAAAQD8AFQAFQAAAAAAAQD8AFUAFQAAAAAAAQD9AFQAFQAAAAAAAQD9AFUAFQAAAAAAAQD+AFQAFQAAAAAAAQD+AFUAFQAAAAAAAQD/AFQAFQAAAAAAAQD/AFUAFQAAAAAAAQDwAFMAFQAAAAAAAQDxAFMAFQAAAAAAAQDyAFMAFQAAAAAAAQDzAFMAFQAAAAAAAQD0AFMAFQAAAAAAAQD1AFMAFQAAAAAAAQD2AFMAFQAAAAAAAQD3AFMAFQAAAAAAAQD4AFMAFQAAAAAAAQD5AFMAFQAAAAAAAQD6AFMAFQAAAAAAAQD7AFMAFQAAAAAAAQD8AFMAFQAAAAAAAQD9AFMAFQAAAAAAAQD+AFMAFQAAAAAAAQD/AFMAFQAAAAAAAQD1AFIAFQAAAAAAAQD2AFIAFQAAAAAAAQD3AFIAFQAAAAAAAQD4AFIAFQAAAAAAAQD5AFIAFQAAAAAAAQD6AFIAFQAAAAAAAQD7AFIAFQAAAAAAAQD8AFIAFQAAAAAAAQD9AFIAFQAAAAAAAQD+AFIAFQAAAAAAAQD/AFIAFQAAAAAAAQD6AFEAFQAAAAAAAQD7AFEAFQAAAAAAAQD8AFEAFQAAAAAAAQD9AFEAFQAAAAAAAQD+AFEAFQAAAAAAAQD/AFEAFQAAAAAAAQAkAGH/HgAAAAAAAQAlAGH/BQAAAAAAAAAmAGH/BQAAAAAAAAAnAGH/HgAAAAAAAAAkAGL/BQAAAAAAAgAkAGP/BQAAAAAAAgAkAGT/BQAAAAAAAgAkAGX/BQAAAAAAAgAkAGb/BQAAAAAAAgAnAGL/BQAAAAAAAwAnAGP/BQAAAAAAAwAnAGT/BQAAAAAAAwAnAGX/BQAAAAAAAwAnAGb/BQAAAAAAAwAlAGL/CgAAAAAAAAAlAGP/CgAAAAAAAAAmAGP/CgAAAAAAAAAmAGL/CgAAAAAAAAAmAGT/CgAAAAAAAAAlAGT/CgAAAAAAAAAlAGX/CgAAAAAAAAAmAGX/CgAAAAAAAAAlAGb/CgAAAAAAAAAmAGb/CgAAAAAAAAAqAGL/HgAAAAAAAQArAGL/BQAAAAAAAAAsAGL/BQAAAAAAAAAtAGL/BQAAAAAAAAAuAGL/BQAAAAAAAAAvAGL/BQAAAAAAAAAwAGL/HgAAAAAAAAAqAGP/BQAAAAAAAgAqAGT/BQAAAAAAAgAqAGX/BQAAAAAAAgAqAGb/BQAAAAAAAgAwAGP/BQAAAAAAAwAwAGT/BQAAAAAAAwAwAGX/BQAAAAAAAwAwAGb/BQAAAAAAAwArAGP/CgAAAAAAAAAsAGP/CgAAAAAAAAAtAGP/CgAAAAAAAAAuAGP/CgAAAAAAAAAvAGP/CgAAAAAAAAAvAGT/CgAAAAAAAAAuAGT/CgAAAAAAAAAtAGT/CgAAAAAAAAAsAGT/CgAAAAAAAAArAGT/CgAAAAAAAAArAGX/CgAAAAAAAAAsAGX/CgAAAAAAAAAtAGX/CgAAAAAAAAAuAGX/CgAAAAAAAAAvAGX/CgAAAAAAAAAvAGb/CgAAAAAAAAAuAGb/CgAAAAAAAAAtAGb/CgAAAAAAAAAsAGb/CgAAAAAAAAArAGb/CgAAAAAAAAAzAGH/HgAAAAAAAQA1AGH/HgAAAAAAAAA0AGH/BQAAAAAAAAAzAGL/BQAAAAAAAgAzAGP/BQAAAAAAAgAzAGT/BQAAAAAAAgAzAGX/BQAAAAAAAgAzAGb/BQAAAAAAAgA1AGP/BQAAAAAAAwA1AGT/BQAAAAAAAwA1AGX/BQAAAAAAAwA1AGb/BQAAAAAAAwA2AGL/FwAAAAAAAAA1AGL/CgAAAAAAAAA0AGL/CgAAAAAAAAA0AGP/CgAAAAAAAAA0AGT/CgAAAAAAAAA0AGX/CgAAAAAAAAA0AGb/CgAAAAAAAAA7AGL/FwAAAAAAAAA8AGH/HgAAAAAAAQA/AGH/HgAAAAAAAAA9AGH/BQAAAAAAAAA+AGH/BQAAAAAAAAA8AGP/BQAAAAAAAgA8AGT/BQAAAAAAAgA8AGX/BQAAAAAAAgA8AGb/BQAAAAAAAgA/AGL/BQAAAAAAAwA/AGP/BQAAAAAAAwA/AGT/CgAAAAAAAAA/AGX/CgAAAAAAAAA/AGb/CgAAAAAAAAA8AGL/CgAAAAAAAAA9AGL/CgAAAAAAAAA+AGL/CgAAAAAAAAA9AGP/CgAAAAAAAAA+AGP/CgAAAAAAAAA+AGT/CgAAAAAAAAA9AGT/CgAAAAAAAAA9AGX/CgAAAAAAAAA+AGX/CgAAAAAAAAA+AGb/CgAAAAAAAAA9AGb/CgAAAAAAAABAAGH/EwAAAAAAAABBAGH/EwAAAAAAAABCAGH/EwAAAAAAAABDAGH/EwAAAAAAAABEAGH/EwAAAAAAAABFAGH/EwAAAAAAAABGAGH/EwAAAAAAAABHAGH/EwAAAAAAAABIAGH/EwAAAAAAAABJAGH/EwAAAAAAAABKAGH/EwAAAAAAAABLAGH/EwAAAAAAAABAAGT/BQAAAAAAAABBAGT/BQAAAAAAAABCAGT/BQAAAAAAAABDAGT/BQAAAAAAAABEAGT/BQAAAAAAAABFAGT/BQAAAAAAAABGAGT/BQAAAAAAAABHAGT/BQAAAAAAAABIAGT/BQAAAAAAAABJAGT/BQAAAAAAAABKAGT/BQAAAAAAAABLAGT/BQAAAAAAAABAAGX/CgAAAAAAAABBAGX/CgAAAAAAAABCAGX/CgAAAAAAAABDAGX/CgAAAAAAAABEAGX/CgAAAAAAAABFAGX/CgAAAAAAAABGAGb/CgAAAAAAAABHAGb/CgAAAAAAAABIAGb/CgAAAAAAAABJAGb/CgAAAAAAAABKAGb/CgAAAAAAAABLAGb/CgAAAAAAAABLAGX/CgAAAAAAAABKAGX/CgAAAAAAAABJAGX/CgAAAAAAAABIAGX/CgAAAAAAAABHAGX/CgAAAAAAAABGAGX/CgAAAAAAAABAAGb/CgAAAAAAAABBAGb/CgAAAAAAAABCAGb/CgAAAAAAAABDAGb/CgAAAAAAAABEAGb/CgAAAAAAAABFAGb/CgAAAAAAAABAAGL/EwAAAAAAAABBAGL/EwAAAAAAAABCAGL/EwAAAAAAAABDAGL/EwAAAAAAAABEAGL/EwAAAAAAAABFAGL/EwAAAAAAAABGAGL/EwAAAAAAAABHAGL/EwAAAAAAAABIAGL/EwAAAAAAAABJAGL/EwAAAAAAAABKAGL/EwAAAAAAAABLAGL/EwAAAAAAAABLAGP/EwAAAAAAAABKAGP/EwAAAAAAAABJAGP/EwAAAAAAAABIAGP/EwAAAAAAAABHAGP/EwAAAAAAAABGAGP/EwAAAAAAAABFAGP/EwAAAAAAAABEAGP/EwAAAAAAAABDAGP/EwAAAAAAAABCAGP/EwAAAAAAAABBAGP/EwAAAAAAAABAAGP/EwAAAAAAAABMAGH/HgAAAAAAAQBMAGL/BQAAAAAAAgBMAGP/BQAAAAAAAgBMAGT/CgAAAAAAAABMAGX/CgAAAAAAAABMAGb/CgAAAAAAAABNAGH/BQAAAAAAAABNAGL/CgAAAAAAAABNAGP/CgAAAAAAAABOAGH/BQAAAAAAAABOAGL/CgAAAAAAAABOAGP/CgAAAAAAAABPAGH/HgAAAAAAAABPAGL/BQAAAAAAAwBPAGP/BQAAAAAAAwBPAGT/BQAAAAAAAwBPAGX/BQAAAAAAAwBPAGb/BQAAAAAAAwBNAGT/CgAAAAAAAABNAGX/CgAAAAAAAABNAGb/CgAAAAAAAABOAGT/CgAAAAAAAABOAGX/CgAAAAAAAABOAGb/CgAAAAAAAADCAFYAFQAAAAAAAQDDAFYAFQAAAAAAAQDEAFYAFQAAAAAAAQDFAFYAFQAAAAAAAQDGAFYAFQAAAAAAAQDHAFYAFQAAAAAAAQDIAFYAFQAAAAAAAQDJAFYAFQAAAAAAAQDKAFYAFQAAAAAAAQDLAFYAFQAAAAAAAQDMAFYAFQAAAAAAAQDNAFYAFQAAAAAAAQDOAFYAFQAAAAAAAQDPAFYAFQAAAAAAAQDQAFYAFQAAAAAAAQDRAFYAFQAAAAAAAQDSAFYAFQAAAAAAAQDTAFYAFQAAAAAAAQDUAFYAFQAAAAAAAQDVAFYAFQAAAAAAAQDWAFYAFQAAAAAAAQDXAFYAFQAAAAAAAQDYAFYAFQAAAAAAAQDZAFYAFgAAAAAAAwDdAFYAFgAAAAAAAgDeAFYAFQAAAAAAAQDfAFYAFQAAAAAAAQDgAFYAFgAAAAAAAwDkAFYAFgAAAAAAAgDlAFYAFQAAAAAAAQDmAFYAFQAAAAAAAQDnAFYAFgAAAAAAAwDsAFYAFgAAAAAAAgDtAFYAFQAAAAAAAQDuAFYAFQAAAAAAAQDvAFYAFQAAAAAAAQDwAFYAFQAAAAAAAQDxAFYAFQAAAAAAAQDyAFYAFQAAAAAAAQDzAFYAFQAAAAAAAQD0AFYAFQAAAAAAAQD1AFYAFQAAAAAAAQD2AFYAFQAAAAAAAQD3AFYAFQAAAAAAAQD4AFYAFQAAAAAAAQD5AFYAFQAAAAAAAQD6AFYAFQAAAAAAAQD7AFYAFQAAAAAAAQD8AFYAFQAAAAAAAQD9AFYAFQAAAAAAAQD+AFYAFQAAAAAAAQD/AFYAFQAAAAAAAQAAAVYAFQAAAAAAAQABAVYAFQAAAAAAAQACAVYAFQAAAAAAAQADAVYAFQAAAAAAAQAEAVYAFQAAAAAAAQAFAVYAFQAAAAAAAQDCAFcAFQAAAAAAAQDDAFcAFQAAAAAAAQDEAFcAFQAAAAAAAQDFAFcAFQAAAAAAAQDGAFcAFQAAAAAAAQDHAFcAFQAAAAAAAQDIAFcAFQAAAAAAAQDJAFcAFQAAAAAAAQDKAFcAFQAAAAAAAQDLAFcAFQAAAAAAAQDMAFcAFQAAAAAAAQDNAFcAFQAAAAAAAQDOAFcAFQAAAAAAAQDPAFcAFQAAAAAAAQDQAFcAFQAAAAAAAQDRAFcAFQAAAAAAAQDSAFcAFQAAAAAAAQDTAFcAFQAAAAAAAQDUAFcAFQAAAAAAAQDVAFcAFQAAAAAAAQDWAFcAFQAAAAAAAQDXAFcAFQAAAAAAAQDYAFcAFQAAAAAAAQDZAFcAFgAAAAAAAwDdAFcAFgAAAAAAAgDeAFcAFQAAAAAAAQDfAFcAFQAAAAAAAQDgAFcAFgAAAAAAAwDkAFcAFgAAAAAAAgDlAFcAFQAAAAAAAQDmAFcAFQAAAAAAAQDnAFcAFgAAAAAAAwDsAFcAFgAAAAAAAgDtAFcAFQAAAAAAAQDuAFcAFQAAAAAAAQDvAFcAFQAAAAAAAQDwAFcAFQAAAAAAAQDxAFcAFQAAAAAAAQDyAFcAFQAAAAAAAQDzAFcAFQAAAAAAAQD0AFcAFQAAAAAAAQD1AFcAFQAAAAAAAQD2AFcAFQAAAAAAAQD3AFcAFQAAAAAAAQD4AFcAFQAAAAAAAQD5AFcAFQAAAAAAAQD6AFcAFQAAAAAAAQD7AFcAFQAAAAAAAQD8AFcAFQAAAAAAAQD9AFcAFQAAAAAAAQD+AFcAFQAAAAAAAQD/AFcAFQAAAAAAAQAAAVcAFQAAAAAAAQABAVcAFQAAAAAAAQACAVcAFQAAAAAAAQADAVcAFQAAAAAAAQAEAVcAFQAAAAAAAQAFAVcAFQAAAAAAAQDCAFgAFQAAAAAAAQDDAFgAFQAAAAAAAQDEAFgAFQAAAAAAAQDFAFgAFQAAAAAAAQDGAFgAFQAAAAAAAQDHAFgAFQAAAAAAAQDIAFgAFQAAAAAAAQDJAFgAFQAAAAAAAQDKAFgAFQAAAAAAAQDLAFgAFQAAAAAAAQDMAFgAFQAAAAAAAQDNAFgAFQAAAAAAAQDOAFgAFQAAAAAAAQDPAFgAFQAAAAAAAQDQAFgAFQAAAAAAAQDRAFgAFQAAAAAAAQDSAFgAFQAAAAAAAQDTAFgAFQAAAAAAAQDUAFgAFQAAAAAAAQDVAFgAFQAAAAAAAQDWAFgAFQAAAAAAAQDXAFgAFQAAAAAAAQDYAFgAFQAAAAAAAQDZAFgAFgAAAAAAAwDdAFgAFgAAAAAAAgDeAFgAFQAAAAAAAQDfAFgAFQAAAAAAAQDgAFgAFgAAAAAAAwDkAFgAFgAAAAAAAgDlAFgAFQAAAAAAAQDmAFgAFQAAAAAAAQDnAFgAFgAAAAAAAwDsAFgAFgAAAAAAAgDtAFgAFQAAAAAAAQDuAFgAFQAAAAAAAQDvAFgAFQAAAAAAAQDwAFgAFQAAAAAAAQDxAFgAFQAAAAAAAQDyAFgAFQAAAAAAAQDzAFgAFQAAAAAAAQD0AFgAFQAAAAAAAQD1AFgAFQAAAAAAAQD2AFgAFQAAAAAAAQD3AFgAFQAAAAAAAQD4AFgAFQAAAAAAAQD5AFgAFQAAAAAAAQD6AFgAFQAAAAAAAQD7AFgAFQAAAAAAAQD8AFgAFQAAAAAAAQD9AFgAFQAAAAAAAQD+AFgAFQAAAAAAAQD/AFgAFQAAAAAAAQAAAVgAFQAAAAAAAQABAVgAFQAAAAAAAQACAVgAFQAAAAAAAQADAVgAFQAAAAAAAQAEAVgAFQAAAAAAAQAFAVgAFQAAAAAAAQDCAEQAFQAAAAAAAQDCAEUAFQAAAAAAAQDDAEQAFQAAAAAAAQDDAEUAFQAAAAAAAQDEAEQAFQAAAAAAAQDEAEUAFQAAAAAAAQDFAEQAFQAAAAAAAQDFAEUAFQAAAAAAAQDGAEQAFQAAAAAAAQDGAEUAFQAAAAAAAQDHAEQAFQAAAAAAAQDHAEUAFQAAAAAAAQDIAEQAFQAAAAAAAQDIAEUAFQAAAAAAAQDJAEQAFQAAAAAAAQDJAEUAFQAAAAAAAQDKAEQAFQAAAAAAAQDKAEUAFQAAAAAAAQDLAEQAFQAAAAAAAQDLAEUAFQAAAAAAAQDMAEQAFQAAAAAAAQDMAEUAFQAAAAAAAQDNAEQAFQAAAAAAAQDNAEUAFQAAAAAAAQDOAEQAFQAAAAAAAQDOAEUAFQAAAAAAAQDPAEQAFQAAAAAAAQDPAEUAFQAAAAAAAQDQAEQAFQAAAAAAAQDQAEUAFQAAAAAAAQDRAEQAFQAAAAAAAQDRAEUAFQAAAAAAAQDSAEQAFQAAAAAAAQDSAEUAFQAAAAAAAQDTAEQAFQAAAAAAAQDTAEUAFQAAAAAAAQDUAEQAFQAAAAAAAQDUAEUAFQAAAAAAAQDVAEQAFQAAAAAAAQDVAEUAFQAAAAAAAQDWAEQAFQAAAAAAAQDWAEUAFQAAAAAAAQDXAEQAFQAAAAAAAQDXAEUAFQAAAAAAAQDYAEQAFQAAAAAAAQDYAEUAFQAAAAAAAQDZAEQAFgAAAAAAAwDZAEUAFgAAAAAAAwDdAEQAFgAAAAAAAgDdAEUAFgAAAAAAAgDeAEQAFQAAAAAAAQDeAEUAFQAAAAAAAQDfAEQAFQAAAAAAAQDfAEUAFQAAAAAAAQDgAEQAFgAAAAAAAwDgAEUAFgAAAAAAAwDkAEQAFgAAAAAAAgDkAEUAFgAAAAAAAgDlAEQAFQAAAAAAAQDlAEUAFQAAAAAAAQDmAEQAFQAAAAAAAQDmAEUAFQAAAAAAAQDnAEQAFgAAAAAAAwDnAEUAFgAAAAAAAwDsAEQAFgAAAAAAAgDsAEUAFgAAAAAAAgDtAEQAFQAAAAAAAQDtAEUAFQAAAAAAAQDuAEQAFQAAAAAAAQDuAEUAFQAAAAAAAQDvAEQAFQAAAAAAAQDvAEUAFQAAAAAAAQDwAEQAFQAAAAAAAQDwAEUAFQAAAAAAAQDxAEQAFQAAAAAAAQDxAEUAFQAAAAAAAQDyAEQAFQAAAAAAAQDyAEUAFQAAAAAAAQDzAEQAFQAAAAAAAQDzAEUAFQAAAAAAAQD0AEQAFQAAAAAAAQD0AEUAFQAAAAAAAQD1AEQAFQAAAAAAAQD1AEUAFQAAAAAAAQD2AEQAFQAAAAAAAQD2AEUAFQAAAAAAAQD3AEQAFQAAAAAAAQD3AEUAFQAAAAAAAQD4AEQAFQAAAAAAAQD4AEUAFQAAAAAAAQD5AEQAFQAAAAAAAQD5AEUAFQAAAAAAAQD6AEQAFQAAAAAAAQD6AEUAFQAAAAAAAQD7AEQAFQAAAAAAAQD7AEUAFQAAAAAAAQD8AEQAFQAAAAAAAQD8AEUAFQAAAAAAAQD9AEQAFQAAAAAAAQD9AEUAFQAAAAAAAQD+AEQAFQAAAAAAAQD+AEUAFQAAAAAAAQD/AEQAFQAAAAAAAQD/AEUAFQAAAAAAAQAAAUQAFQAAAAAAAQAAAUUAFQAAAAAAAQABAUQAFQAAAAAAAQABAUUAFQAAAAAAAQACAUQAFQAAAAAAAQACAUUAFQAAAAAAAQADAUQAFQAAAAAAAQADAUUAFQAAAAAAAQAEAUQAFQAAAAAAAQAEAUUAFQAAAAAAAQAFAUQAFQAAAAAAAQAFAUUAFQAAAAAAAQDCAEIAFQAAAAAAAQDCAEMAFQAAAAAAAQDDAEIAFQAAAAAAAQDDAEMAFQAAAAAAAQDEAEIAFQAAAAAAAQDEAEMAFQAAAAAAAQDFAEIAFQAAAAAAAQDFAEMAFQAAAAAAAQDGAEIAFQAAAAAAAQDGAEMAFQAAAAAAAQDHAEIAFQAAAAAAAQDHAEMAFQAAAAAAAQDIAEIAFQAAAAAAAQDIAEMAFQAAAAAAAQDJAEIAFQAAAAAAAQDJAEMAFQAAAAAAAQDKAEIAFQAAAAAAAQDKAEMAFQAAAAAAAQDLAEIAFQAAAAAAAQDLAEMAFQAAAAAAAQDMAEIAFQAAAAAAAQDMAEMAFQAAAAAAAQDNAEIAFQAAAAAAAQDNAEMAFQAAAAAAAQDOAEIAFQAAAAAAAQDOAEMAFQAAAAAAAQDPAEIAFQAAAAAAAQDPAEMAFQAAAAAAAQDQAEIAFQAAAAAAAQDQAEMAFQAAAAAAAQDRAEIAFQAAAAAAAQDRAEMAFQAAAAAAAQDSAEIAFQAAAAAAAQDSAEMAFQAAAAAAAQDTAEIAFQAAAAAAAQDTAEMAFQAAAAAAAQDUAEIAFQAAAAAAAQDUAEMAFQAAAAAAAQDVAEIAFQAAAAAAAQDVAEMAFQAAAAAAAQDWAEIAFQAAAAAAAQDWAEMAFQAAAAAAAQDXAEIAFQAAAAAAAQDXAEMAFQAAAAAAAQDYAEIAFQAAAAAAAQDYAEMAFQAAAAAAAQDZAEIAFgAAAAAAAwDZAEMAFgAAAAAAAwDdAEIAFgAAAAAAAgDdAEMAFgAAAAAAAgDeAEIAFQAAAAAAAQDeAEMAFQAAAAAAAQDfAEIAFQAAAAAAAQDfAEMAFQAAAAAAAQDgAEIAFgAAAAAAAwDgAEMAFgAAAAAAAwDkAEIAFgAAAAAAAgDkAEMAFgAAAAAAAgDlAEIAFQAAAAAAAQDlAEMAFQAAAAAAAQDmAEIAFQAAAAAAAQDmAEMAFQAAAAAAAQDnAEIAFgAAAAAAAwDnAEMAFgAAAAAAAwDsAEIAFgAAAAAAAgDsAEMAFgAAAAAAAgDtAEIAFQAAAAAAAQDtAEMAFQAAAAAAAQDuAEIAFQAAAAAAAQDuAEMAFQAAAAAAAQDvAEIAFQAAAAAAAQDvAEMAFQAAAAAAAQDwAEIAFQAAAAAAAQDwAEMAFQAAAAAAAQDxAEIAFQAAAAAAAQDxAEMAFQAAAAAAAQDyAEIAFQAAAAAAAQDyAEMAFQAAAAAAAQDzAEIAFQAAAAAAAQDzAEMAFQAAAAAAAQD0AEIAFQAAAAAAAQD0AEMAFQAAAAAAAQD1AEIAFQAAAAAAAQD1AEMAFQAAAAAAAQD2AEIAFQAAAAAAAQD2AEMAFQAAAAAAAQD3AEIAFQAAAAAAAQD3AEMAFQAAAAAAAQD4AEIAFQAAAAAAAQD4AEMAFQAAAAAAAQD5AEIAFQAAAAAAAQD5AEMAFQAAAAAAAQD6AEIAFQAAAAAAAQD6AEMAFQAAAAAAAQD7AEIAFQAAAAAAAQD7AEMAFQAAAAAAAQD8AEIAFQAAAAAAAQD8AEMAFQAAAAAAAQD9AEIAFQAAAAAAAQD9AEMAFQAAAAAAAQD+AEIAFQAAAAAAAQD+AEMAFQAAAAAAAQD/AEIAFQAAAAAAAQD/AEMAFQAAAAAAAQAAAUIAFQAAAAAAAQAAAUMAFQAAAAAAAQABAUIAFQAAAAAAAQABAUMAFQAAAAAAAQACAUIAFQAAAAAAAQACAUMAFQAAAAAAAQADAUIAFQAAAAAAAQADAUMAFQAAAAAAAQAEAUIAFQAAAAAAAQAEAUMAFQAAAAAAAQAFAUIAFQAAAAAAAQAFAUMAFQAAAAAAAQA=")
tile_set = ExtResource("1_qgxo7")

[node name="Obstacles" type="TileMapLayer" parent="."]
use_parent_material = true
tile_map_data = PackedByteArray("AAAoAGL/BgAAAAAAAAApAGL/BgAAAAAAAAAoAGP/BgAAAAAAAAAoAGT/BgAAAAAAAAAoAGX/BgAAAAAAAAAoAGb/BgAAAAAAAAApAGb/BgAAAAAAAAApAGX/BgAAAAAAAAApAGT/BgAAAAAAAAApAGP/BgAAAAAAAAAxAGL/BgAAAAAAAAAyAGL/BgAAAAAAAAAyAGP/BgAAAAAAAAAxAGP/BgAAAAAAAAAyAGT/BgAAAAAAAAAxAGT/BgAAAAAAAAAxAGX/BgAAAAAAAAAyAGX/BgAAAAAAAAAyAGb/BgAAAAAAAAAxAGb/BgAAAAAAAAA2AGP/BgAAAAAAAAA3AGP/BgAAAAAAAAA4AGP/BgAAAAAAAAA5AGP/BgAAAAAAAAA6AGP/BgAAAAAAAAA7AGP/BgAAAAAAAAA2AGT/BgAAAAAAAAA2AGX/BgAAAAAAAAA2AGb/BgAAAAAAAAA3AGb/BgAAAAAAAAA4AGb/BgAAAAAAAAA5AGb/BgAAAAAAAAA6AGb/BgAAAAAAAAA7AGb/BgAAAAAAAAA7AGX/BgAAAAAAAAA7AGT/BgAAAAAAAAA6AGT/BgAAAAAAAAA5AGT/BgAAAAAAAAA4AGT/BgAAAAAAAAA3AGT/BgAAAAAAAAA3AGX/BgAAAAAAAAA4AGX/BgAAAAAAAAA5AGX/BgAAAAAAAAA6AGX/BgAAAAAAAABHAGD/BwAAAAAAAABGAGD/BwAAAAAAAADaAFEABgAAAAAAAADaAFIABgAAAAAAAADbAFMABgAAAAAAAADbAFQABgAAAAAAAADbAFUABgAAAAAAAADaAFUABgAAAAAAAADaAFQABgAAAAAAAADaAFMABgAAAAAAAADcAFUABgAAAAAAAADcAFQABgAAAAAAAADcAFMABgAAAAAAAADcAFIABgAAAAAAAADbAFIABgAAAAAAAADbAFEABgAAAAAAAADcAFEABgAAAAAAAADhAFEABgAAAAAAAADiAFEABgAAAAAAAADjAFEABgAAAAAAAADjAFIABgAAAAAAAADjAFMABgAAAAAAAADjAFQABgAAAAAAAADjAFUABgAAAAAAAADiAFUABgAAAAAAAADhAFUABgAAAAAAAADhAFQABgAAAAAAAADhAFMABgAAAAAAAADhAFIABgAAAAAAAADiAFIABgAAAAAAAADiAFMABgAAAAAAAADiAFQABgAAAAAAAADoAFUABgAAAAAAAADpAFUABgAAAAAAAADqAFUABgAAAAAAAADrAFUABgAAAAAAAADrAFQABgAAAAAAAADoAFQABgAAAAAAAADpAFQABgAAAAAAAADqAFQABgAAAAAAAADvAFIABwAAAAAAAAD0AFEABwAAAAAAAAD5AFAABwAAAAAAAAD5AEsABwAAAAAAADD0AEoABwAAAAAAADDvAEkABwAAAAAAADDaAFYABgAAAAAAAADaAFcABgAAAAAAAADaAFgABgAAAAAAAADbAFgABgAAAAAAAADcAFgABgAAAAAAAADcAFcABgAAAAAAAADcAFYABgAAAAAAAADbAFYABgAAAAAAAADbAFcABgAAAAAAAADhAFYABgAAAAAAAADiAFYABgAAAAAAAADjAFYABgAAAAAAAADjAFcABgAAAAAAAADiAFcABgAAAAAAAADhAFcABgAAAAAAAADhAFgABgAAAAAAAADiAFgABgAAAAAAAADjAFgABgAAAAAAAADoAFYABgAAAAAAAADoAFcABgAAAAAAAADoAFgABgAAAAAAAADpAFgABgAAAAAAAADpAFcABgAAAAAAAADpAFYABgAAAAAAAADqAFYABgAAAAAAAADqAFcABgAAAAAAAADqAFgABgAAAAAAAADrAFgABgAAAAAAAADrAFcABgAAAAAAAADrAFYABgAAAAAAAADkAE8ABwAAAAAAAADgAE8ABwAAAAAAAADnAEwABwAAAAAAADDdAEwABwAAAAAAADDUAE8ABwAAAAAAAADZAEwABwAAAAAAADA=")
tile_set = ExtResource("2_7tm2o")

[node name="ExitCave" type="Area2D" parent="."]
position = Vector2(16320, 4992)

[node name="CollisionShape2D" type="CollisionShape2D" parent="ExitCave"]
shape = SubResource("RectangleShape2D_k21x6")

[node name="Interactable" type="Sprite2D" parent="ExitCave"]
visible = false
position = Vector2(0, -96)
scale = Vector2(2.5, 2.5)
texture = ExtResource("4_a7wfw")

[node name="Checkpoints" type="Node2D" parent="."]

[node name="CheckpointVI" type="Area2D" parent="Checkpoints"]
position = Vector2(2384, -10240)
script = ExtResource("5_y21hv")
metadata/_edit_group_ = true

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Checkpoints/CheckpointVI"]
sprite_frames = SubResource("SpriteFrames_sac2s")
animation = &"Default"
autoplay = "Default"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Checkpoints/CheckpointVI"]
shape = SubResource("RectangleShape2D_8ny5a")

[connection signal="body_entered" from="ExitCave" to="." method="_on_exit_cave_body_entered"]
[connection signal="body_exited" from="ExitCave" to="." method="_on_exit_cave_body_exited"]
[connection signal="body_entered" from="Checkpoints/CheckpointVI" to="Checkpoints/CheckpointVI" method="_on_body_entered"]
